<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/customToolbarId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorOrange"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.Toolbar>

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_search_24"
                app:tint="@color/colorWhite"
                android:background="@color/colorTransparent"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/add_recipe"
                android:textColor="@color/colorWhite"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/customToolbarId"
                app:layout_constraintStart_toStartOf="@+id/customToolbarId"
                app:layout_constraintTop_toTopOf="@+id/customToolbarId" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddRecipeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/background_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/food_semi_transparent"
                android:contentDescription="@string/image"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/content2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_image"
                        style="@style/add_recipe_texts"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/addImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorTransparent"
                        android:textSize="16sp"
                        android:textColor="@color/darkGrey"
                        android:text="@string/change_image"
                        android:fontFamily="sans-serif-medium"
                        android:textAllCaps="false"
                        android:layout_weight="1"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="16dp" />

                    <Button
                        android:id="@+id/imagechangedone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:background="@color/colorTransparent"
                        android:fontFamily="sans-serif-medium"
                        android:text="Mentés"
                        android:textAllCaps="false"
                        android:textColor="@color/darkGrey"
                        android:textSize="16sp"
                        android:visibility="gone" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="1dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp">

                    <ImageView
                        android:id="@+id/recipeImage"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:background="@color/colorWhite"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_image"
                        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                        android:contentDescription="@string/image" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_category"
                    style="@style/add_recipe_texts"/>

                <Spinner
                    android:id="@+id/spinnerCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:entries="@array/categories"
                    android:spinnerMode="dropdown"
                    android:backgroundTint="@color/colorOrange"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_title"
                    style="@style/add_recipe_texts"/>

                <EditText
                    android:id="@+id/recipeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_title_hint"
                    android:maxLength="48"
                    style="@style/add_recipe_input"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_ingredient"
                    style="@style/add_recipe_texts"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <ImageButton
                    android:id="@+id/addIngredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:tint="@color/colorOrange"
                    android:background="@color/colorTransparent"
                    android:src="@drawable/ic_baseline_add_circle_36"
                    android:contentDescription="@string/image"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_description"
                    style="@style/add_recipe_texts"/>

                <EditText
                    android:id="@+id/recipeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_description_hint"
                    android:maxLength="1024"
                    style="@style/add_recipe_input"/>

                <Button
                    android:id="@+id/saveButton"
                    android:text="@string/add_save"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    style="@style/orange_button"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"/>

            </LinearLayout>

        </ScrollView>


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:theme="@style/navigation_drawer"
            app:itemTextColor="@color/darkGrey"
            app:headerLayout="@layout/nav_header"
            android:background="@color/colorWhite"
            app:menu="@menu/nav_drawer_menu"/>

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>